@@ -49,3 +49,18 @@ sub validate_args {
     }
     $self->validate( $opt, $args );
 }
+
+=head1 AUTHOR
+
+Paul G Webster <support@opusvl.com>
+
+=head1 COPYRIGHT AND LICENSE
+
+This software is copyright (c) 2020 by OpusVL.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
+
+=cut
+
+1;
