@@ -16,4 +16,4 @@ nytprof.out
 *.o
 *.bs
 /_eumm/
-/POE-Component-Client-Open-eREACT-*
+/POE-Component-FunctionNet-*
