@@ -1,4 +1,4 @@
-name    = POE-Component-Client-Open-eREACT
+name    = POE-Component-FunctionNet
 author  = Paul G Webster <daemon@cpan.org>
 license = Perl_5
 copyright_holder = Paul G Webster
